[gd_scene load_steps=10 format=3 uid="uid://cqj5r8ouc0jg7"]

[ext_resource type="Script" path="res://menus/options_menu.gd" id="1_iiij7"]
[ext_resource type="Texture2D" uid="uid://b1owrdhvdhpqq" path="res://assets/Returnbutton.png" id="2_g7b0s"]
[ext_resource type="Texture2D" uid="uid://dfrcx0y6vwk34" path="res://assets/VolumeButton.png" id="2_qrlsc"]
[ext_resource type="Texture2D" uid="uid://b611sjsfhtin1" path="res://assets/Returnbuttonhover.png" id="3_b6hl6"]
[ext_resource type="Texture2D" uid="uid://biw2fl1yrhq5o" path="res://assets/VolumeButtonHover.png" id="3_nsnf3"]
[ext_resource type="Texture2D" uid="uid://bxgd7rgbg8uk6" path="res://assets/controlsbutton.png" id="4_4hkbs"]
[ext_resource type="Texture2D" uid="uid://dk8iiooyy8yug" path="res://assets/controlsbuttonhover.png" id="5_ouph3"]

[sub_resource type="Gradient" id="Gradient_syuc7"]
offsets = PackedFloat32Array(0.980519, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1yi6l"]
gradient = SubResource("Gradient_syuc7")
fill_from = Vector2(1, 0)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iiij7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 256.0
texture = SubResource("GradientTexture2D_1yi6l")

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 58.27
offset_right = 192.0
offset_bottom = 126.27

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 2

[node name="VolumeButton" type="TextureButton" parent="Options/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_qrlsc")
texture_hover = ExtResource("3_nsnf3")

[node name="HSlider" type="HSlider" parent="Options/VBoxContainer"]
visible = false
layout_mode = 2

[node name="VolumeValue" type="Label" parent="Options/VBoxContainer/HSlider"]
layout_mode = 2
offset_left = 51.0
offset_top = 0.729996
offset_right = 76.0
offset_bottom = 13.73
text = "100"

[node name="ControlsButton" type="TextureButton" parent="Options"]
layout_mode = 2
texture_normal = ExtResource("4_4hkbs")
texture_hover = ExtResource("5_ouph3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 196.0
offset_right = 192.0
offset_bottom = 264.0

[node name="ReturnButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_g7b0s")
texture_hover = ExtResource("3_b6hl6")
stretch_mode = 3

[connection signal="pressed" from="Options/VBoxContainer/VolumeButton" to="." method="_on_volume_button_pressed"]
[connection signal="drag_ended" from="Options/VBoxContainer/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="drag_started" from="Options/VBoxContainer/HSlider" to="." method="_on_h_slider_drag_started"]
[connection signal="pressed" from="Options/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
